# readmdict

./: README.md  play_audio.py  pyproject.toml
src/readmdict/: play_audio.py  readmdict.py  show_mdd.py
