[project]
name = "readmdict"
version = "0.1.1"
description = "readmdict (simple repacking of readmdict in mdict-analysis)"
authors = [{name = "freemt"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-lzo>=1.15",
]

[project.urls]
Repository = "https://github.com/ffreemt/readmdict"

[project.scripts]
readmdict = "readmdict.__main__:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/readmdict"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]
